--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-rate-limit": "^7.2.0",
+    "fs": "^0.0.1-security",
     "helmet": "^7.1.0",
-    "mongoose": "^8.3.0"
+    "mongoose": "^8.3.0",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
